--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,14 @@ services:
       - '9620:9616'
     environment:
       - DB_CONNECTION=mysql+pymysql://root:root@mysql:3306/polkascan?charset=utf8mb4
-      - SUBSTRATE_RPC_URL=ws://substrate-node:9944
+      - SUBSTRATE_RPC_URL=wss://entrypoint-finney.opentensor.ai:443
 #      - SUBSTRATE_RPC_URL=ws://host.docker.internal:9944
       - NODE_TYPE=archive
       - SUBSTRATE_SS58_FORMAT=42
       - INSTALLED_ETL_DATABASES=polkascan_explorer
     depends_on:
       - mysql
-      - substrate-node
+      #- substrate-node
 
   polling:
     build:
@@ -84,17 +84,17 @@ services:
       - "8080:80"
     depends_on:
       - api
-      - substrate-node
-
-  substrate-node:
-    image: parity/substrate:latest
-    restart: unless-stopped
-    volumes:
-      - 'substrate-node:/substrate'
-    ports:
-      - '9944:9944'
-      - '9933:9933'
-    command: --dev --base-path /substrate/db --ws-external --rpc-cors=all --rpc-external --rpc-methods=Unsafe --no-telemetry --no-prometheus --pruning=archive
+      #- substrate-node
+  
+  #substrate-node:
+  #  image: parity/substrate:latest
+  #  restart: unless-stopped
+  #  volumes:
+  #    - 'substrate-node:/substrate'
+  #  ports:
+  #    - '9944:9944'
+  #    - '9933:9933'
+  #  command: --dev --base-path /substrate/db --ws-external --rpc-cors=all --rpc-external --rpc-methods=Unsafe --no-telemetry --no-prometheus --pruning=archive
 
   mysql:
     image: mysql:latest
@@ -110,6 +110,6 @@ services:
     image: "redis:latest"
 
 volumes:
-  substrate-node:
+  #substrate-node:
   mysql-data:
 
