--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,12 +100,13 @@ services:
     image: mysql:latest
     volumes:
       - 'mysql-data:/var/lib/mysql'
-      - 'mysql-cnf:~'
+      #- './my.cnf:'
     ports:
       - '33061:3306'
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=polkascan
+    command: -–innodb_force_recovery=4
 
   redis:
     image: "redis:latest"
@@ -113,5 +114,4 @@ services:
 volumes:
   #substrate-node:
   mysql-data:
-  mysql-cnf:
 
